fix: Fix background color in dark mode

--- a/src/prompt-input/styles.scss
+++ b/src/prompt-input/styles.scss
@@ -25,6 +25,8 @@ $invalid-border-offset: constants.$invalid-control-left-padding;
   @include control-border-radius();
   cursor: text;
 
+  background-color: awsui.$color-background-input-default;
+
   border-block: styles.$control-border-width solid awsui.$color-border-input-default;
   border-inline: styles.$control-border-width solid awsui.$color-border-input-default;
 
@@ -77,6 +79,7 @@ $invalid-border-offset: constants.$invalid-control-left-padding;
   cursor: text;
   // Allow multi-line placeholders
   white-space: pre-wrap;
+  background-color: inherit;
 
   padding-block: styles.$control-padding-vertical;
   padding-inline: styles.$control-padding-horizontal;
@@ -86,7 +89,7 @@ $invalid-border-offset: constants.$invalid-control-left-padding;
   inline-size: 100%;
   display: block;
   box-sizing: border-box;
-  background-color: awsui.$color-background-input-default;
+
   border: 0;
 
   &::placeholder {
